--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,45 +18,45 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: '>=3.8.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^7.0.1
-  bloc: ^7.0.0
-  dartz: ^0.10.0-nullsafety.2
-  firebase_core: ^1.4.0
-  firebase_auth: ^3.0.1
-  cloud_firestore: ^2.4.0
-  google_sign_in: ^5.0.5
-  get_it: ^7.2.0
-  injectable: ^1.4.1
-  another_flushbar: ^1.10.24
-  uuid: ^3.0.4
-  auto_route: ^2.2.0
-  kt_dart: ^0.9.1
-  json_serializable: ^4.1.3
-  json_annotation: ^4.0.1
-  rxdart: ^0.27.1
-  flutter_hooks: ^0.18.0
-  provider: ^5.0.0
-  flutter_slidable: ^0.6.0
-  implicitly_animated_reorderable_list: ^0.4.0
+  flutter_bloc: ^9.1.1
+#  bloc: ^7.1.0
+  dartz: ^0.10.1
+  firebase_core: ^4.1.0
+  firebase_auth: ^6.0.2
+  cloud_firestore: ^6.0.1
+  google_sign_in: ^7.1.1
+  get_it: ^8.2.0
+  injectable: ^2.5.1
+  another_flushbar: ^1.12.31
+  uuid: ^4.5.1
+  auto_route: ^10.1.2
+  kt_dart: ^1.1.0
+  json_serializable: ^6.11.1
+  json_annotation: ^4.9.0
+  rxdart: ^0.28.0
+  flutter_hooks: ^0.21.3+1
+  provider: ^6.1.5+1
+  flutter_slidable: ^4.0.1
+  animated_list_plus: ^0.5.2
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.3
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.0.6
-  freezed:  ^0.14.2
-  injectable_generator: ^1.4.1
-  lint: ^1.5.3
-  auto_route_generator: ^2.1.0
+  build_runner: ^2.7.1
+  freezed: ^3.1.0
+  injectable_generator: ^2.8.1
+  lint: ^2.8.0
+  auto_route_generator: ^10.2.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
